com.top_logic.themes.core/src/main/webapp/style/tables.css
/* ... */
td.tblTDselectStrong {
	font-size:        11px;
	font-weight:	  bold;
    white-space:      nowrap;
	padding:          2px;
	border-color:     var(--layer-accent);
	background-color: var(--layer-accent);
	color: var(--layer-accent-text);
	--button-fg: var(--layer-accent-icon);
	border-width:     0px;
}

td.tblTDselect100 {
	font-weight:	  bold;
    white-space:      nowrap;
	padding:          2px;
	border-color:     var(--layer-accent);
	background-color: var(--layer-accent);
	color: var(--layer-accent-text);
	--button-fg: var(--layer-accent-icon);
	width:            100%;
	border-width:     0px;
}

a.tl-table__cell {
	font-size:13px;
	color:black;
	text-decoration:var(--ANCHOR_TEXT_DECORATION_TABLE_HEADER_LINK);
}

a.tl-table__cell:visited {
	font-size:13px;
	color:black;
}

/** Images inlined in the table */
img.tbl {
	vertical-align:	middle;
	border: 		none;
	padding-left:	2px;
	padding-right:	2px;
}

/* == styles for register tables == */

table.regTable {
	border-collapse: separate;
	border-width: 	 0px;
	border-style:    solid;
	border:    		 none;
	width:		     100%;
}

th.regTitle {
	background-color: var(--layer-accent);
	color: var(--layer-accent-text);
	--button-fg: var(--layer-accent-icon);
	font-size:        13px;
	font-weight:      normal;
	padding:          2px;
	border-color:     var(--border-strong);
	border-style:     solid;
}

tr.regTH {
}

th.regTH {
	font-size:        13px;
	font-weight:      normal;
    white-space:      nowrap;
	padding:          2px;
	border-color:     var(--border-strong);
	color:            black;
	background-color: var(--layer);
}

tr.regTR {
	background-color:#F7F7E7;
}

tr.regTR_even {
	background-color:#F7F7E7;
}

td.regTD {
	font-size:      10px;
    white-space:    nowrap;
	padding:        0px;
	vertical-align: top;
	border-color:     var(--border-strong);
	border-style:   outset;
	color:          black;
}

td.regTDStrong {
	font-size:      10px;
	font-weight:	bold;
    white-space:    nowrap;
	padding:        0px;
	vertical-align: top;
	border-color:     var(--border-strong);
	color:          black;
}

td.regTDwrap {
	font-size:      10px;
	padding:        0px;
	vertical-align: top;
	border-color:     var(--border-strong);
	color:          black;
}

td.regTDCenter {
	font-size:      10px;
	text-align:     center;
    white-space:    nowrap;
	padding:        0px;
	vertical-align: top;
	border-color:     var(--border-strong);
	color:          black;
}

td.regTDRight {
	font-size:      10px;
	text-align:     right;
    white-space:    nowrap;
	padding:        0px;
	vertical-align: top;
	border-color:     var(--border-strong);
	color:          black;
}

td.regTD100 {
	font-size:      10px;
    white-space:    nowrap;
	padding:        0px;
	vertical-align: top;
	border-color:     var(--border-strong);
	color:          black;
	width:          100%;
}

tr.regTRselect {
	/* background-color: #ADAEAD; */
	background-color:#F7F7E7;
}

td.regTDselected {
	font-size:        11px;
	font-weight:	  bold;
    white-space:      nowrap;
	padding:          0px;
	vertical-align:   top;
	border-color:     var(--border-strong);
	border-style:     outset;
}

td.regTDselectedStrong {
	font-size:        10px;
	font-weight:	  bold;
    white-space:      nowrap;
	padding:          0px;
	vertical-align:   top;
	border-color:     var(--border-strong);
	color:            var(--text-primary);
	background-color: #ADAEAD;
}

td.regTDselected100 {
	font-size:        10px;
	font-weight:	  bold;
    white-space:      nowrap;
	padding:          0px;
	vertical-align:   top;
	border-color:     var(--border-strong);
	color:            var(--text-primary);
	background-color: #ADAEAD;
	width:          100%;
}

select.tbl {	/* Tables can be written as selects, using this style */
 	width: 80%;
}

.fltButtons {
	height: var(--TABLE_FILTER_BUTTON_BAR_HEIGHT);
	display: flex;
	justify-content: space-around;
    align-items: center;
}

td.fltButton {
	width:17px;
	text-align: center;
	position: relative;
}

.fltButtons .cButton {
	padding: 0 var(--spacing-01);
}

.tl-table__header-cell-content .fltButton.tl-table__filter-sort-icons {
	color: var(--highlight-fg, var(--button-fg, var(--icon-primary)));
	align-self: center;
}

.tl-table__header-cell-content .fltButton:not(.activeFilter):not(.tl-table__filter-sort-icons) {
	color: var(--icon-disabled);
}

.tl-table__header-cell-content .fltButton:not(.activeFilter):not(.tl-table__filter-sort-icons):hover {
	color: var(--highlight-fg, var(--button-fg, var(--icon-primary)));
}

.tl-table__header-cell-content .fltButton.activeFilter {
	color: var(--icon-interactive);
}

.tl-table__header-cell-content .fltButton.activeFilter:hover {
	color: var(--support-danger);
}

.fltReset a:not(.disabled) {
	color: var(--icon-interactive);
}

.fltReset:hover a:not(.disabled) {
	color: var(--support-danger);
}

th span.tl-table__filter-sort-icons {
	align-self: end;
	font-size: .6rem;
}

tr.sortState{
	background: var(--FILTER_SORT_DIALOG_SORT_STATE);
}

div.tl-table__filter-sort-container {
	width: 100%;
	height: 100%;
	cursor: pointer;
	min-width: 1.5em;
	display: flex;
	align-items: center;
}

.sidebarFilterContainer {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	overflow-x: hidden;
	overflow-y: auto;
	background-color: var(--layer);
    height: 100%;
}

.sidebarFilterContainer > div {
  	margin-bottom: var(--spacing-03);
}

.sidebarFilterEntry {
	position: relative;
	box-sizing: border-box;
	height: 1.5rem;
	width: 100%;
	white-space: nowrap;
	background: var(--layer);
	padding-left: var(--spacing-01);
	display: flex;
	align-items: center;
}

.collapsibleFilterEntry {
	cursor: pointer;
}

.resetSidebarFilterButton {
	position: absolute;
	right: 0;
	padding-right: var(--spacing-01);
}

table.tblFrozen {
    table-layout: fixed;
    margin: 0;
    padding: 0;
    border-spacing: 0;
    border: 0;
    border-right: var(--TABLE_COLUMN_BORDER_WIDTH) solid var(--border-subtle);
    border-collapse: collapse;
}
/* ... */

